bumping font size and fixing alignment inside text boxes

--- a/style.css
+++ b/style.css
@@ -12,4 +12,6 @@ input[type=text] {
 	border: none;
 	width: 40px;
 	height: 40px;
+	text-align: center;
+	font-size: 40px;
 }
